--- a/Webs1101881/Views/Default/Index.cshtml
+++ b/Webs1101881/Views/Default/Index.cshtml
@@ -2,15 +2,36 @@
 @{
     ViewBag.Title = "Index";
 }
-<div>姓名<input /></div>
-<div>帳號<input /></div>
-<div>密碼<input /></div>
-<div>性別<input type="radio" name="gender" value="B"> Female</div>
-<div>興趣<input type="radio" name="gender" value="B"> Female</div>
-<div>自我介紹<textarea id="story" name="story"
-              rows="5" cols="33">
-</textarea>
+<div>姓名:<input /></div>
+<div>帳號:<input /></div>
+<div>密碼:<input /></div>
+<div>性別:
+    <input type="radio" name="gender" value="B"> 男性
+    <input type="radio" name="gender" value="B"> 女性
 </div>
+<div>興趣:
+    <input type="radio" name="gender" value="B"> 游泳
+    <input type="radio" name="gender" value="B"> 閱讀
+    <input type="radio" name="gender" value="B"> 看電影
+</div>
+<div>自我介紹:
+    <textarea id="story" name="story" rows="5" cols="33">
+    </textarea>
+</div>
+/////////////////
+@using (Html.BeginForm("Index", "Test", FormMethod.Post)){
+    <div>
+        帳號: @Html.TextBox("account")<br />
+        密碼: @Html.Password("password")<br />
+        年齡: @Html.TextBox("age")<br />
+        性別: @Html.RadioButton("gender", "A")男生<br />
+        @Html.RadioButton("gender", "B")女生<br />
+        興趣: @Html.CheckBox("reading", "A")看書<br />
+        @Html.CheckBox("swimming", "B")游泳<br />
+        關於我: @Html.TextArea("about")
+    </div>
+}
+
 
 
 
