--- a/Webs1101881/Views/Students/Create.cshtml
+++ b/Webs1101881/Views/Students/Create.cshtml
@@ -17,25 +17,6 @@
     {
         @class = "text-danger"
     })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Id, htmlAttributes: new
-        {
-            @class = "control-label col-md-2"
-        })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Id, new
-            {
-                htmlAttributes = new
-                {
-                    @class = "form-control"
-                }
-            })
-            @Html.ValidationMessageFor(model => model.Id, "", new
-            {
-                @class = "text-danger"
-            })
-        </div>
-    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Name, htmlAttributes: new
@@ -110,7 +91,7 @@
                     @class = "form-control"
                 }
             })
-            @Html.ValidationMessageFor(model => model.Email, "", new
+            @Html.ValidationMessageFor(model => model.isActive, "", new
             {
                 @class = "text-danger"
             })
