--- a/Webs1101881/Views/Students/Index.cshtml
+++ b/Webs1101881/Views/Students/Index.cshtml
@@ -29,7 +29,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.Username)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Number)
